--- a/bangazon/appsettings.Development.json
+++ b/bangazon/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=.\\SQLEXPRESS; Database=Bangazon; Trusted_Connection=True;"
 }
