returning product with orders WIP. updated Id property to OrderId and reconfigured code

--- a/bangazon/appsettings.Development.json
+++ b/bangazon/appsettings.Development.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionString": "Server=(local); Database=Bangazon; Trusted_Connection=True;"
+  "ConnectionString": "Server=.\\SQLEXPRESS; Database=Bangazon; Trusted_Connection=True;"
 }
 
