--- a/bangazon/bangazon.csproj
+++ b/bangazon/bangazon.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Node.js" Version="5.3.0" />
   </ItemGroup>
 
 </Project>
