--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -5,5 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=(local);Database=Bangazon;Trusted_Connection=True;"
+  "ConnectionString": "Server=.\\SQLEXPRESS; Database=Bangazon; Trusted_Connection=True;"
 }
