fixed bug. all orders printing again

--- a/bangazon/appsettings.json
+++ b/bangazon/appsettings.json
@@ -5,5 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=.\\SQLEXPRESS; Database=Bangazon; Trusted_Connection=True;"
+  "ConnectionString": "server = .\\SQLEXPRESS; Database=Bangazon; Trusted_Connection=True;"
 }
