--- a/WebApplication1/appsettings.Development.json
+++ b/WebApplication1/appsettings.Development.json
@@ -6,6 +6,5 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionString": "Server=(local); Database=Bangazon; Trusted_Connection=True;"
+  "ConnectionString": "Server = .\\SQLEXPRESS; Database=Bangazon; Trusted_Connection=True;"
 }
-
