--- a/WebApplication1/ClientApp/package.json
+++ b/WebApplication1/ClientApp/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.0",
+    "react-dates": "^18.3.1",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "reactstrap": "^6.5.0",
     "rimraf": "^2.6.2"
   },
   "scripts": {
