all works but Departments, Computers, and Products

--- a/WebApplication1/bangazonFront.csproj
+++ b/WebApplication1/bangazonFront.csproj
@@ -18,8 +18,15 @@
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="ClientApp\src\components\ProductTypes\NewFolder1\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="ClientApp\src\components\ProductTypes\NewFolder1\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="ClientApp\src\components\ProductTypes\NewFolder1\**" />
+    <None Remove="ClientApp\src\components\ProductTypes\NewFolder1\**" />
   </ItemGroup>
 
   <ItemGroup>
