--- a/bangazonUserFront/appsettings.json
+++ b/bangazonUserFront/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server = (local); Database=Bangazon; Trusted_Connection=True;"
 }
