--- a/bangazonUserFront/appsettings.json
+++ b/bangazonUserFront/appsettings.json
@@ -5,5 +5,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=(local);Database=FishStore;Trusted_Connection=True;"
+  "ConnectionString": "Server=(local);Database=Bangazon;Trusted_Connection=True;"
 }
