added a firebaseRequests folder with connection.js and auth.js files.

--- a/bangazonUserFront/ClientApp/src/constants.js.example
+++ b/bangazonUserFront/ClientApp/src/constants.js.example
@@ -1,4 +1,7 @@
 ﻿const constants =  {
+bangazonConfig: {
+        databaseURL: ''
+    },
   firebaseConfig: {
     apiKey: '',
     authDomain: '',
